<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:text="@string/tv2_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/but4"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="@+id/but3"
        app:layout_constraintTop_toBottomOf="@+id/secondNum" />

    <Button
        android:id="@+id/but1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but1_text"
        app:layout_constraintBottom_toTopOf="@+id/tv2"
        app:layout_constraintEnd_toStartOf="@+id/but2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/secondNum"
        app:layout_constraintTop_toTopOf="@+id/secondNum"
        app:layout_constraintVertical_bias="0.402" />

    <Button
        android:id="@+id/but2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but2_text"
        app:layout_constraintBottom_toTopOf="@+id/tv2"
        app:layout_constraintEnd_toEndOf="@+id/secondNum"
        app:layout_constraintStart_toEndOf="@+id/but1"
        app:layout_constraintTop_toTopOf="@+id/secondNum"
        app:layout_constraintVertical_bias="0.402" />

    <Button
        android:id="@+id/but3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but3_text"
        app:layout_constraintBottom_toTopOf="@+id/tv2"
        app:layout_constraintEnd_toStartOf="@+id/but4"
        app:layout_constraintStart_toStartOf="@+id/secondNum"
        app:layout_constraintTop_toBottomOf="@+id/secondNum"
        app:layout_constraintVertical_bias="0.663" />

    <Button
        android:id="@+id/but4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but4_text"
        app:layout_constraintBottom_toTopOf="@+id/tv2"
        app:layout_constraintEnd_toEndOf="@+id/secondNum"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/but3"
        app:layout_constraintTop_toBottomOf="@+id/secondNum"
        app:layout_constraintVertical_bias="0.663" />

    <EditText
        android:id="@+id/fristNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="@string/fristNum_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/secondNum"
        app:layout_constraintEnd_toEndOf="@+id/secondNum"
        app:layout_constraintStart_toStartOf="@+id/secondNum" />

    <EditText
        android:id="@+id/secondNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/secondNum_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>